--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ section {
     margin-left: 50px;
     margin-right: 50px;
     position: relative;
+    font-size: 100px;
 }
 
 
@@ -29,6 +30,5 @@ section {
 }
 
 .topLeft:hover {
-    transform: translateX(150px);
-
+    transform: translate(50px);
 }
