--- a/css/style.css
+++ b/css/style.css
@@ -121,37 +121,86 @@ section {
 
 .three {
     position: absolute;
-    /* opacity: 0; */
-    right: -100%;
+    right: -150%;
     margin-top: 250px;
     transform: translate(-50px);
     animation: 
+        slide-from-right 1.5s ease-in 5s forwards;
         
 }
 
 
 .four {
     position: absolute;
-    /* opacity: 0; */
     right: -100%;
     margin-top: 400px;
-    transform: translate(-150px);
+    transform: translateX(-1400px);
+    animation: 
+        slide-from-left 2s ease-out 6.5s forwards;
 }
 
 
 .five {
     position: absolute;
-    /* opacity: 0; */
-    right: -100%;
+    right: -150%;
     margin-top: 550px;
     transform: translate(-50px);
+    animation: 
+        slide-from-right 1.5s ease-in 7s forwards;
+}
+
+.rightDone {
+    background-color: aqua;
+    display: inline-block;
+    color: firebrick;
+    transition-property: all;
+    transition-duration: 5s;
+    transition-timing-function: ease;
+}
+
+/* pageThree */
+
+.lineOne {
+    position: absolute;
+    opacity: 0%;
+    right: -100%;
+    transform: translateX(-50px);
+    animation:
+        fade-from-right 1s ease-in 1s forwards;
 }
 
 
+.lineAnimation {
+    position: absolute;
+    right: -100%;
+    margin-top: 150px;
+    transform: translate(-50px);
+    overflow: hidden;
+    white-space: nowrap;
+    letter-spacing: 50px;
+    animation-name: closeIn;
+    animation-duration: 7s;
+    animation-delay: 3s;
+}
 
 
+.lineThree{
+    opacity: 0;
+    position: absolute;
+    right: -100%;
+    margin-top: 300px;
+    overflow: hidden;
+    white-space: nowrap;
+    border-left: 5px solid;
+    animation: 
+        blinking 500ms steps(10) infinite,
+        typingRight 3s steps(18, end) 3s forwards,
+        rightfadeIn 1s forwards;
+    animation-delay: 7s;
+}       
 
-/* Keyframes */
+
+                    /* Keyframes */
 
 @keyframes leftfadeIn {
    from {
@@ -201,6 +250,53 @@ section {
 /* pageTwo keyframes*/
 
 @keyframes fade-from-right {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes slide-from-right {
+    0% {
+        transform: translateX(100px);
+    }
+    100% {
+        transform: translateX(-400px);
+    }
+}
+
+@keyframes slide-from-left {
+    0% {
+        transform: translateX(-1400px);
+    }
+    100% {
+        transform: translateX(-200px);
+    }
+}
+
+/* pageThree keyframes */
+
+@keyframes closeIn {
+    0% {
+        letter-spacing: 50px;
+    }
+    100% {
+        letter-spacing: 0;
+    }
+}
+
+@keyframes typingRight {
+    width {
+        width: 0;
+    }
+    to {
+        width: 100%;
+    }
+}
+
+@keyframes rightfadeIn {
     from {
         opacity: 0;
     }
