--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ section {
     text-align: center;
     margin: auto;
     animation: 
-        expandPage 5s ease 6s forwards;
+        expandPage 7s ease 4s forwards;
     /* background-color: aquamarine; */
 }
 
@@ -117,7 +117,7 @@ section {
 
 
 .two {
-    position: absolute;
+    /* position: absolute;
     opacity: 0;
     right: -100%;
     margin-top: 100px;
@@ -129,7 +129,12 @@ section {
         blinking 500ms steps(10) infinite,
         typing 3s steps(10, end) 3s forwards,
         centerfadeIn 1s forwards;
-    animation-delay: 2s;
+    animation-delay: 2s; */
+
+    position: absolute;
+    margin-top: 100px;
+    right: -650px;
+
 }
 
 .three {
@@ -192,9 +197,9 @@ section {
     white-space: nowrap;
     letter-spacing: 50px;
     animation-name: closeIn;
-    animation-duration: 7s;
+    animation-duration: 4s;
     animation-fill-mode: forwards;
-    animation-delay: 3s;
+    animation-delay: 2s;
 }
 
 
@@ -203,15 +208,19 @@ section {
     position: absolute;
     right: -100%;
     margin-top: 300px;
-    overflow: hidden;
+   /*  overflow: hidden; */
     white-space: nowrap;
-    border-left: 5px solid;
+    border-right: 5px solid;
     animation: 
         blinking 500ms steps(10) infinite,
         typingRight 3s steps(18, end) 3s forwards,
         rightfadeIn 1s forwards;
-    animation-delay: 7s;
+    animation-delay: 4s;
 }       
+
+.feel {
+    color: firebrick;
+}
 
 /* pageFour */
 
@@ -456,10 +465,10 @@ section {
 
 @keyframes expandPage {
     0% {
-        height: 100vh
+        height: 100vh;
     }
     100% {
-        height: 300vh
+        height: 225vh;
     }
 }
 
