--- a/css/style.css
+++ b/css/style.css
@@ -288,7 +288,7 @@ section {
     opacity: 0;
     transform: scale(3);
     animation: 
-        shrink-move 2s ease-in-out 3s forwards,
+        shrink-move 1s ease-in 2s forwards,
         fade-center 1s ease-in forwards;
 }
 
@@ -297,7 +297,7 @@ section {
     position: absolute;
     margin-top: 200px;
     animation: 
-        fade-center 1s ease-in 5s forwards
+        fade-center 1s ease-in 3s forwards
 }
 
 .true {
@@ -305,7 +305,7 @@ section {
     position: absolute;
     margin-top: 400px;
     animation: 
-        fade-center 1s ease-in 6s forwards
+        fade-center 1s ease-in 4s forwards
 }
 
 .love {
@@ -313,7 +313,7 @@ section {
     position: absolute;
     margin-top: 600px;
     animation: 
-        fade-center 1s ease-in 7s forwards
+        fade-center 1s ease-in 5s forwards
 }
 
 .it {
@@ -321,7 +321,7 @@ section {
     position: absolute;
     margin-top: 800px;
     animation: 
-        fade-center 1s ease-in 8s forwards
+        fade-center 1s ease-in 6s forwards
 }
 
 .aint {
@@ -329,7 +329,7 @@ section {
     position: absolute;
     margin-top: 1000px;
     animation: 
-        fade-center 1s ease-in 9s forwards
+        fade-center 1s ease-in 7s forwards
 }   
 
 .last {
@@ -338,7 +338,7 @@ section {
     margin-top: 1200px;
     color:firebrick;
     animation: 
-        fade-center 1s ease-in 10s forwards
+        fade-center 1s ease-in 8s forwards
 }
 
                     /* Keyframes */
